fix safari images, spacing

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -421,7 +421,7 @@ Gallery Styles
 .grid figure img {
 	position: relative;
 	display: block;
-	min-height: 100%;
+	//min-height: 100%;
 	max-width: 100%;
 }
 
@@ -645,7 +645,15 @@ Media Queries
 	.centertext {
 		text-align: center;
 	}
-	
+	.feature-icons
+	{
+		float: left;
+		font-size: 12px;
+		margin: 0px 10px 0px 0px;
+	}
+	.grid figure h2 {
+		font-size: .7em;
+	}
 
 }
 
